WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222032
Backgrounding a page that is playing and capturing audio will stop audio playing
https://bugs.webkit.org/show_bug.cgi?id=222032
Summary
Backgrounding a page that is playing and capturing audio will stop audio playing
youenn fablet
Reported
2021-02-17 00:54:20 PST
<
rdar://problem/74389497
>
Attachments
Patch
(3.12 KB, patch)
2021-02-17 01:42 PST
,
youenn fablet
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.14 KB, patch)
2021-02-17 02:12 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-17 00:54:38 PST
<
rdar://problem/74425464
>
youenn fablet
Comment 2
2021-02-17 00:55:45 PST
<
rdar://problem/74389497
>
youenn fablet
Comment 3
2021-02-17 01:28:00 PST
In the past, if a video element was rendering local mic and local camera, and the page gets backgrounded, it would continue playing audio in the background. Playing a MediaStream through an audio element still works. After
https://commits.webkit.org/r272583
though, this no longer works.
youenn fablet
Comment 4
2021-02-17 01:42:06 PST
Created
attachment 420616
[details]
Patch
youenn fablet
Comment 5
2021-02-17 02:12:43 PST
Created
attachment 420621
[details]
Patch
youenn fablet
Comment 6
2021-02-18 00:40:04 PST
Comment on
attachment 420621
[details]
Patch Win error unrelated
EWS
Comment 7
2021-02-18 00:43:57 PST
Committed
r273069
: <
https://commits.webkit.org/r273069
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420621
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug